Completed a Api of a Product Details and Product Page With Frontend Side getting Dynamically Completed